implemented sorting in skill-catalog-service
